--- a/Java2Patrick/Java2Patrick/src/main/res/layout/mainview.xml
+++ b/Java2Patrick/Java2Patrick/src/main/res/layout/mainview.xml
@@ -1,7 +1,234 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:src="@drawable/navbar0" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/searchSuggs"
+            style="@style/LightText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="\nSearch the EverydayGamers website for reviews!\n" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <EditText
+            android:id="@+id/searchField"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.85"
+            android:hint="Search a Review" />
+
+        <Button
+            android:id="@+id/searchButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.12"
+            android:text="GO" />
+    </LinearLayout>
+
+    <GridLayout
+        android:id="@+id/gameResults"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="31.67"
+        android:columnCount="5"
+        android:orientation="horizontal" >
+
+        <TextView
+            style="@style/BlueTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="0"
+            android:text="Title: " />
+
+        <TextView
+            android:id="@+id/game_title1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="0" />
+
+        <TextView
+            style="@style/BlueTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="1"
+            android:text="URL: " />
+
+        <TextView
+            android:id="@+id/game_url1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="1" />
+
+        <TextView
+            style="@style/BlueTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="2"
+            android:text="Title:"
+            android:id="@+id/textView" />
+
+        <TextView
+            android:id="@+id/game_title2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="2" />
+
+        <TextView
+            style="@style/BlueTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="3"
+            android:text="URL: "
+            android:id="@+id/textView2" />
+
+        <TextView
+            android:id="@+id/game_url2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="3" />
+
+        <TextView
+            style="@style/BlueTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="4"
+            android:text="Title:"
+            android:id="@+id/textView3" />
+
+        <TextView
+            android:id="@+id/game_title3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="4" />
+
+        <TextView
+            style="@style/BlueTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="5"
+            android:text="URL: "
+            android:id="@+id/textView4" />
+
+        <TextView
+            android:id="@+id/game_url3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="5" />
+
+        <TextView
+            style="@style/BlueTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="6"
+            android:text="Title:"
+            android:id="@+id/textView5" />
+
+        <TextView
+            android:id="@+id/game_title4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="6" />
+
+        <TextView
+            style="@style/BlueTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="7"
+            android:text="URL: "
+            android:id="@+id/textView6" />
+
+        <TextView
+            android:id="@+id/game_url4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="7" />
+
+        <TextView
+            style="@style/BlueTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="8"
+            android:text="Title:"
+            android:id="@+id/textView7" />
+
+        <TextView
+            android:id="@+id/game_title5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="8" />
+
+        <TextView
+            style="@style/BlueTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="9"
+            android:text="URL:"
+            android:id="@+id/textView8" />
+
+        <TextView
+            android:id="@+id/game_url5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="9" />
+
+        <!--<Button-->
+        <!--android:id="@+id/button1"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_column="0"-->
+        <!--android:layout_columnSpan="3"-->
+        <!--android:layout_gravity="center_horizontal|top"-->
+        <!--android:layout_row="3"-->
+        <!--android:text="Open in Browser" />-->
+
+        <!--<Space-->
+        <!--android:layout_width="248dp"-->
+        <!--android:layout_height="1dp"-->
+        <!--android:layout_column="1"-->
+        <!--android:layout_row="0" />-->
+
+        <!--<Space-->
+        <!--android:layout_width="79dp"-->
+        <!--android:layout_height="15dp"-->
+        <!--android:layout_column="2"-->
+        <!--android:layout_row="0" />-->
+    </GridLayout>
 
 </LinearLayout>
